toggle contentEditable properly

--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
         <ul id="list"></ul>
     </div>
 
-    <div contenteditable="true" class="text">PLADO is about <div contenteditable="false" class="blank"><span id="current">you.</span><span class="future"></span></div></div>
+    <div class="text">
+        <div class="content">PLADO is about <div contenteditable="false" class="blank"><span id="current">you.</span><span class="future"></span></div></div>
+    </div>
+    
     <div class="footer">
         <div class="wrapper">
             <p>Copyright &copy; 2016 PLADO Inc. All rights reserved.</p>
