--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <title>PLADO Branding Test</title>
     
+    <link rel="favicon" href="favicon.ico">
     <link rel="stylesheet" href="assets/index.css">
+
     <style id="custom">
         #future {
             display: none;
